# IoT-hands-on

./: README.md
.github/ISSUE_TEMPLATE/: aprendizaje-clave.md  lab-practica.md  lectura.md  modulo-video.md  modulo.md  quiz.md  video.md
04-programming_platform_iot-rust/iot-plat/: Cargo.toml
04-programming_platform_iot-rust/iot-plat-hands-on-pico/: Cargo.toml
04-programming_platform_iot-rust/iot-plat-hands-on-pico/src/: main.rs
04-programming_platform_iot-rust/iot-plat-hands-on-pico/src/tasks/: serial.rs  usb.rs
04-programming_platform_iot-rust/iot-plat/.cargo/: config.toml
04-programming_platform_iot-rust/iot-plat/src/: lib.rs  main.rs
04-programming_platform_iot-rust/iot-plat/src/tasks/: blink.rs  mod.rs
