[package]
edition = "2021"
name = "iot-plat"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = "1.0"
embedded-io-async = "0.7"
rp-pico = "0.9"

# Embassy
embassy-executor = { version = "0.9", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-time = { version = "0.5" }
embassy-rp = { version = "0.8", features = [
    "rp2040",
    "time-driver",
    "critical-section-impl",
] }
embassy-usb = { version = "0.5" }
embassy-sync = { version = "0.7" }
embassy-futures = "0.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2"

# Panic handler
panic-halt = "1.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
